--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1633,7 +1633,7 @@
 		}
 
 	a {
-		color: #2113B0;
+		color: #1f54a8;
 		text-decoration: underline;
 	}
 
@@ -1655,7 +1655,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #2113B0;
+		color: #1f54a8;
 		font-weight: 300;
 		line-height: 1.5;
 		margin: 0 0 1em 0;
@@ -1805,7 +1805,7 @@
 		}
 
 		section.wrapper.style1, article.wrapper.style1 {
-			background: #2113B0;
+			background: #1f54a8;
 			color: #bacee6;
 		}
 
@@ -2028,8 +2028,8 @@
 		input[type="tel"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #2113B0;
-			box-shadow: 0 0 0 1px #2113B0;
+			border-color: #1f54a8;
+			box-shadow: 0 0 0 1px #1f54a8;
 		}
 
 	.select-wrapper {
@@ -2139,8 +2139,8 @@
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #2113B0;
-			box-shadow: 0 0 0 1px #2113B0;
+			border-color: #1f54a8;
+			box-shadow: 0 0 0 1px #1f54a8;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2660,7 +2660,7 @@
 		input[type="button"].special,
 		button.special,
 		.button.special {
-			background-color: #2113B0;
+			background-color: #1f54a8;
 			color: #ffffff !important;
 		}
 
@@ -2716,7 +2716,7 @@
 	}
 
 		.subpage #header {
-			background: #2113B0;
+			background: #1f54a8;
 			top: 0;
 			height: 44px;
 			line-height: 44px;
@@ -2855,7 +2855,7 @@
 		position: fixed;
 		right: 0;
 		top: 0;
-		background: #2113B0;
+		background: #1f54a8;
 		color: #d4e0ef;
 		height: 100%;
 		max-width: 80%;
@@ -2940,7 +2940,7 @@
 		background-attachment: fixed;
 		background-repeat: no-repeat;
 		text-align: center;
-		border-top: 0.5em solid #2113B0;
+		border-top: 0.5em solid #1f54a8;
 	}
 
 		#banner h1 {
